add branch property to procedures model

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -81,8 +81,7 @@
                                 Store Opening
                             </a>
                     </li>
-                    {% endif %}
-                    {% if showClosing == True %}
+                    {% else %}
                     <li class="nav-item">
                         {% url 'closing' as closing_url %}
                         {% if request.path == closing_url %}
