--- a/procedures/templates/procedures.html
+++ b/procedures/templates/procedures.html
@@ -4,8 +4,20 @@
 
   {% if procedures %}
 
-  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
     <h1 class="h2">{% if opening == True %}Opening{% endif %}{% if closing == True %}Closing{% endif %} Tasks</h1>
+    <div class="btn-toolbar mb-2 mb-md-0">
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          {{ branch }}
+        </button>
+        <ul class="dropdown-menu">
+          {% for branch in branches %}
+          <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
 
   <form id="tasksForm" method="post">
@@ -13,8 +25,9 @@
     <div class="list-group w-auto">
       {% for category in categories %}
         <br><b>{{ category.name }}</b><br>
-        {% for procedure in procedures %}
-          {% if procedure.category == category.id %}
+          {% for procedure in procedures %}
+            {% for procedure_branch in procedure.branch %}
+            {% if branch == procedure_branch.name and procedure.category == category.id %}
             <label class="list-group-item d-flex gap-3">
               <fieldset>
                 <input class="form-check-input flex-shrink-0" type="checkbox" style="font-size: 1.375em;" name="done" {% if procedure.date_done|date:"Y-m-d" == today|date:"Y-m-d" %}checked{% endif %} />
@@ -32,7 +45,8 @@
               </div>
               {% endif %}
             </label>
-          {% endif %}
+            {% endif %}
+          {% endfor %}
         {% endfor %}
       {% endfor %}
     </div>
