--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -44,7 +44,7 @@
         <div class="list-group-item collapse" id="collapse{{ storage.name_encoded}}" data-bs-parent="#inventoryList">
           <div class="list-group w-auto">
             {% for product in products %}
-              {% if storage.name in product.storages %}
+              {% if storage in product.storages %}
                 <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                   <span style="font-size: 2rem">
                     📦
