--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -5,7 +5,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
   <h1 class="h2">Shopping list</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <button type="button" class="btn btn-sm btn-outline-secondary">
+    <button type="button" class="btn btn-sm">
       <span data-feather="calendar" class="align-text-bottom"></span>
       Last updated: {{ modifiedDate }}
     </button>
