--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -95,10 +95,11 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        {% if '/inventory/' in request.path %}
-                        <a class="nav-link active" href="{% url 'inventory' 'All' %}">
+                        {% url 'inventory_populate' as inventory_populate_url %}
+                        {% if request.path == inventory_populate_url %}
+                        <a class="nav-link active" href="{% url 'inventory_populate' %}">
                         {% else %}
-                        <a class="nav-link" href="{% url 'inventory' 'All' %}">
+                        <a class="nav-link" href="{% url 'inventory_populate' %}">
                         {% endif %}
                             <span data-feather="layers" class="align-text-bottom"></span>
                             Inventory
@@ -129,12 +130,11 @@
                         {% url 'inventory_evaluation' as inventory_evaluation_url %}
                         {% if request.path == inventory_evaluation_url %}
                         <a class="nav-link active" href="{% url 'inventory_evaluation' %}">
-                            {% else %}
-                            <a class="nav-link" href="{% url 'inventory_evaluation' %}">
-                                {% endif %}
-                                <span data-feather="file-text" class="align-text-bottom"></span>
-                                Inventory
-                            </a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'inventory_evaluation' %}">
+                        {% endif %}
+                            <span data-feather="file-text" class="align-text-bottom"></span>
+                            Inventory
                         </a>
                     </li>
                     <li class="nav-item">
