--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -5,7 +5,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
   <h1 class="h2">Shopping list</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <button type="button" class="btn btn-sm">
+    <button type="button" class="btn btn-sm modified-date">
       <span data-feather="calendar" class="align-text-bottom"></span>
       Last updated: {{ modifiedDate }}
     </button>
@@ -22,7 +22,7 @@
         <tr class="header">
           <th scope="col" width="1%"></th>
           <th scope="col">Name</th>
-          <th scope="col">Storages</th>
+          <th scope="col" class="storages-column">Storages</th>
           <th scope="col" style="white-space: nowrap;">To buy</th>
         </tr>
         {% for product in products %}
@@ -30,7 +30,7 @@
           <tr class="entry">
             <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
             <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
-            <td>
+            <td class="storages-column">
               <label for="checkbox{{forloop.counter}}" style="display: flex; gap: 0.2rem;">
               {% for storage in product.storages %}
               <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary-emphasis">
@@ -77,6 +77,7 @@
     padding-top: 3rem !important;
     font-size: 1.5rem !important;
     font-weight: 200 !important;
+    padding-left: 0 !important;
   }
   tr.header th {
     color: #495057 !important;
@@ -108,6 +109,17 @@
     font-size: 0.85rem;
     padding-right: 0.7rem;
     font-weight: 500;
+  }
+  .modified-date {
+    padding: 0 !important;
+  }
+  @media (max-width: 767px) {
+    .storages-column {
+      display: none;
+    }
+  }
+  label {
+    padding: .9rem .6rem !important;
   }
 </style>
 
