--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -37,7 +37,7 @@
 
     {% for storage in storages %}
     <div class="list-group" id="inventoryList">
-        <h4 data-bs-toggle="collapse" href="#collapse{{ storage.name_encoded }}" role="button" class="list-group-item">
+        <h4 data-bs-toggle="collapse" href="#collapse{{ storage.name_encoded }}" role="button" class="list-group-item bg-light">
           <svg class="bi ms-1" width="24" height="24" style="color: {{ storage.color }};">
             <use xlink:href="#x-circle-fill">
               <symbol id="x-circle-fill" viewBox="0 0 24 24">
@@ -48,7 +48,7 @@
           {{ storage.name }}
         </h4>
         <div class="list-group-item collapse" id="collapse{{ storage.name_encoded}}" data-bs-parent="#inventoryList">
-          <div class="list-group w-auto">
+          <div class="list-group w-auto bg-light">
             {% for product in products %}
               {% if storage in product.storages %}
                 <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -236,13 +236,6 @@
   h4 {
     padding-left: 0.5rem !important;
     margin-bottom: 0rem !important;
-    color: #495057 !important;
-    background-color: #e9ecef !important;
-    border-color: #dee2e6 !important;
-  }
-
-  div.list-group-item div.list-group {
-    background-color: #e9ecef !important;
   }
   div.list-group-item {
     padding: 0 !important;
