--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -4,14 +4,6 @@
 
 <div class="list-group w-auto">
 
-  <div class="alert alert-danger hidden" role="alert">
-    Submitting the inventory failed.
-  </div>
-
-  <div class="alert alert-success hidden" role="alert">
-    Inventory submitted successfully.
-  </div>
-
   <div class="title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
     <h1 class="h2">Update Inventory</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
@@ -30,6 +22,14 @@
         </ul>
       </div>
     </div>
+  </div>
+
+  <div class="alert alert-danger hidden" role="alert">
+    Submitting the inventory failed.
+  </div>
+
+  <div class="alert alert-success hidden" role="alert">
+    Inventory submitted successfully.
   </div>
 
   <form id="form" method="post">
@@ -147,7 +147,7 @@
           window.scrollTo(0, 0);
         }
       }
-      request.open('POST', '/inventory/All');
+      request.open('POST', '/inventory/populate');
       request.setRequestHeader("X-CSRFToken", csrftoken); 
       request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
       request.send(JSON.stringify(objSerializedForm));
