--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -95,6 +95,17 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
+                        {% url 'inventory_packaging' as inventory_packaging_url %}
+                        {% if request.path == inventory_packaging_url %}
+                        <a class="nav-link active" href="{% url 'inventory_packaging' %}">
+                        {% else %}
+                        <a class="nav-link" href="{% url 'inventory_packaging' %}">
+                        {% endif %}
+                            <span data-feather="package" class="align-text-bottom"></span>
+                            Packaging
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         {% url 'inventory_populate' as inventory_populate_url %}
                         {% if request.path == inventory_populate_url %}
                         <a class="nav-link active" href="{% url 'inventory_populate' %}">
