--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -48,7 +48,7 @@
               <td>
                 {% for product_storage, data in product.get_product_storage.items %}
                   {% if product_storage in branch.get_storages %}
-                    {% if data.tobuy %}
+                    {% if data.oos %}
                     <span class="warning">
                     {% else %}
                     <span>
