--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -105,6 +105,19 @@
                             Packaging
                         </a>
                     </li>
+                    {% if user.is_superuser %}
+                    <li class="nav-item">
+                        {% url 'tasks_baking' as tasks_baking_url %}
+                        {% if request.path == tasks_baking_url %}
+                        <a class="nav-link active" href="{% url 'tasks_baking' %}">
+                        {% else %}
+                        <a class="nav-link" href="{% url 'tasks_baking' %}">
+                        {% endif %}
+                            <span data-feather="trello" class="align-text-bottom"></span>
+                            Baking plan
+                        </a>
+                    </li>
+                    {% endif %}
                     <li class="nav-item">
                         {% url 'inventory_populate' as inventory_populate_url %}
                         {% if request.path == inventory_populate_url %}
