--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -3,12 +3,14 @@
 {% block content %}
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
-  <h1 class="h2">Packaging</h1>
-  <div class="btn-toolbar mb-2 mb-md-0">
-    <button type="button" class="btn btn-sm modified-date">
-      <span data-feather="calendar" class="align-text-bottom"></span>
-      Last updated: {{ modifiedDate }}
-    </button>
+  <div>
+    <h1 class="h2">Packaging</h1>
+    <div class="btn-toolbar mb-2 mb-md-0">
+      <button type="button" class="btn btn-sm modified-date">
+        <span data-feather="calendar" class="align-text-bottom"></span>
+        Last updated: {{ modifiedDate }}
+      </button>
+    </div>
   </div>
 </div>
 
