inventory: prevent listing product twice

--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -77,9 +77,9 @@
                     </div>
                   </div>
                 </a>
-                {% endif %}
-              {% endfor %}
-              <input type="submit" class="btn btn-primary" value="Submit inventory" />
+              {% endif %}
+            {% endfor %}
+            <input type="submit" class="btn btn-primary" value="Submit inventory" />
           </div>
         </div>
       </div>
@@ -216,6 +216,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ".";
+    font-size: 1rem;
   }
   .wrap {
     overflow-wrap: anywhere;
