cleanup and enable inventory report filtering

--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -4,27 +4,7 @@
 
 <div class="list-group w-auto">
 
-  <div class="title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-    <div>
-      <h1 class="h2">Update Inventory</h1>
-      <div class="btn-toolbar mb-2 mb-md-0">
-        <button type="button" class="btn btn-sm modified-date">
-          <span data-feather="calendar" class="align-text-bottom"></span>
-          Last updated: {{ modifiedDate }}
-        </button>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        {{ branch }}
-      </button>
-      <ul class="dropdown-menu">
-        {% for branch in branches %}
-        <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
+  {% include "template_title.html" with title="Update Inventory" %}
 
   <div class="alert alert-danger hidden" role="alert">
     Submitting the inventory failed.
