--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -2,17 +2,7 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
-  <div>
-    <h1 class="h2">Shopping list</h1>
-    <div class="btn-toolbar mb-2 mb-md-0">
-      <button type="button" class="btn btn-sm modified-date">
-        <span data-feather="calendar" class="align-text-bottom"></span>
-        Last updated: {{ modifiedDate }}
-      </button>
-    </div>
-  </div>
-</div>
+{% include "template_title.html" with title="Shopping list" %}
 
 <div style="width: 100%;">
   <table class="table table-hover">
