--- a/iaroapp/templates/registration/login.html
+++ b/iaroapp/templates/registration/login.html
@@ -15,6 +15,10 @@
         background-color: #f1f0e6;
       }
 
+      .alert {
+        text-align: left;
+      }
+
       .contentArea {
         width: 100%;
         height: 100vh;
@@ -71,6 +75,18 @@
         <div class="alert alert-danger" role="alert">
           Your username and password didn't match. Please try again.
         </div>
+        {% endif %}
+
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "success" %}
+        <div class="alert alert-success" role="alert">
+        {% else %}
+        <div class="alert alert-danger" role="alert">     
+        {% endif %}
+          {{ message }}
+        </div>
+        {% endfor %}
         {% endif %}
 
         {% load widget_tweaks %}
