--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -14,7 +14,7 @@
     Inventory submitted successfully.
   </div>
 
-  <form id="form" method="post">
+  <form id="product_form" method="post">
     {% csrf_token %}
     <div id="accordion">
     {% for storage in storages %}
@@ -89,16 +89,22 @@
 
   var isSubmittedToday = ('{{ isSubmittedToday | safe }}' === 'True');
 
+  /* Submit inventory */
   function submitForm() {
 
     const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+    
+    /* Hide all older messages */
     var alerts = document.getElementsByClassName("alert");
     for(var i = 0; i < alerts.length; i++) {
       var alert = alerts[i];
       alert.classList.add('hidden');
-    }      var form = document.querySelector('form');
+    }
+    
+    /* Get form data */
+    var form = document.querySelector('#product_form');
     var form_data = new FormData(form);
-
+    console.log(form_data);
     let objSerializedForm = {};
     for (let [name, value] of form_data) {
       if (name === "product") {
@@ -114,7 +120,9 @@
         };
       }
     }
+    objSerializedForm = JSON.stringify(objSerializedForm);
 
+    /* Submit form data */
     var request = new XMLHttpRequest();
     request.onreadystatechange = function() {
       if (request.readyState == 4) {
@@ -132,7 +140,7 @@
     request.open('POST', '/inventory/populate');
     request.setRequestHeader("X-CSRFToken", csrftoken); 
     request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-    request.send(JSON.stringify(objSerializedForm));
+    request.send(objSerializedForm);
 
   }
 
@@ -161,7 +169,7 @@
       submitInventoryModal.hide();
     }
 
-    document.getElementById('form').onsubmit = function (evt) {
+    document.getElementById('product_form').onsubmit = function (evt) {
     
       evt.preventDefault();
 
