--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -89,6 +89,12 @@
       .d-flex {
         align-items: center;
       }
+      .checked {
+        background-color: rgb(249, 244, 174);
+      }
+      .done {
+        background-color: rgb(209, 231, 221);
+      }
     </style>
   
     <script>
@@ -120,9 +126,18 @@
         request.onreadystatechange = function() {
           if (request.readyState == 4) {
             if(request.status == 200) {
+
               var element = document.getElementsByClassName("alert-success")[0];
               element.classList.remove("hidden");
               isSubmittedToday = true;
+
+              // Change all 'checked' classes to 'done'
+              var checkedItems = document.querySelectorAll('.checked');
+              for (var i = 0; i < checkedItems.length; i++) {
+                checkedItems[i].classList.remove('checked');
+                checkedItems[i].classList.add('done');
+              }
+
             } else {
               var element = document.getElementsByClassName("alert-danger")[0];
               element.classList.remove("hidden");
@@ -130,7 +145,7 @@
           }
           window.scrollTo(0, 0);
         }
-        request.open('POST', '/tasks/');
+        request.open('POST', '/tasks/overview');
         request.setRequestHeader("X-CSRFToken", csrftoken);
         request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
         request.send(JSON.stringify(objSerializedForm));
@@ -161,6 +176,19 @@
             infoModal.show();
           })
         })
+
+        // Colorize checked tasks
+        var checkboxes = document.querySelectorAll('input[name="done"]');
+        for (var i = 0; i < checkboxes.length; i++) {
+        checkboxes[i].addEventListener('change', function() {
+          if (this.checked) {
+            this.closest('.list-group-item').classList.add('checked');
+          } else {
+            this.closest('.list-group-item').classList.remove('checked');
+          }
+        });
+        }
+
       })
     </script>
 
