--- a/tasks/templates/tasks_baking.html
+++ b/tasks/templates/tasks_baking.html
@@ -2,50 +2,35 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
-     xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime xmlns:task.done_datetime>
-    <h1 class="h2">Baking plan</h1>
-</div>
+{% include "template_title.html" with title="Baking plan" %}
 
-<div class="alert alert-danger hidden" role="alert">
-  Updating baking plan failed.
-</div>
-
-<div class="alert alert-success hidden" role="alert">
-  Updating baking plan successfully.
-</div>
-
-<form id="form" method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %}
+  {{ formset.management_form }}
   <div style="width: 100%;">
     <table class="table table-hover table-striped">
       <thread class="table-light">
         <tr class="header">
           <th scope="col" style="width:70%;">Name</th>
-          <th scope="col">Quantity West</th>
-          <th scope="col">Quantity East</th>
+          <th scope="col">Quantities</th>
         </tr>
       </thread>
       <tbody>
-        {% for product in products %}
+        {% for form in formset %}
         <tr>
-          <input type="number" name="product" value="{{product.id}}" style="display: none;" />
-          <td class="align-middle">{{ product.name }}</td>
-          <td>
-            <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-              <input name="value" type="text" pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control" id="value" value="" placeholder="10" style="width: 100px;">
-              <small class="opacity-50 text-nowrap truncate">
-                {{ product.unit.all | join:", " }}
-              </small>
+          <td class="align-middle">{{ form.name.value }}</td>
+          <td class="align-middle">
+            {% for product_storage in form.instance.product_storages.all %}
+            <div style="display: flex; align-items: center; flex-direction: row; gap: 0.5rem; margin-bottom: 0.5rem;">
+              <span style="flex-grow: 1;">{{ product_storage.storage }}</span>
+              <input name="{{ product_storage.pk }}" type="text" pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control" id="value" value="" placeholder="{{ product_storage.value_needed }}" style="width: 100px;">
+              {% for unit in form.instance.unit.all %}
+                <small class="opacity-50 text-nowrap truncate">
+                    {{ unit.name }}
+                </small>
+              {% endfor %}
             </div>
-          </td>
-          <td>
-            <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-              <input name="value" type="text" pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control" id="value" value="" placeholder="10" style="width: 100px;">
-              <small class="opacity-50 text-nowrap truncate">
-                {{ product.unit.all | join:", " }}
-              </small>
-            </div>
+            {% endfor %}
           </td>
         </tr>
         {% endfor %}
@@ -78,55 +63,4 @@
   }
 </style>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const form = document.getElementById("form");
-    form.addEventListener("submit", onFormSubmit);
-    function onFormSubmit() {
-
-      const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
-      var alerts = document.getElementsByClassName("alert");
-      for(var i = 0; i < alerts.length; i++) {
-        var alert = alerts[i];
-        alert.classList.add('hidden');
-      }
-      var form_data = new FormData(form);
-
-      let objSerializedForm = {};
-      // for (let [name, value] of form_data) {
-      //   if (name === "product") {
-      //     product = value;
-      //   }
-      //   if (name === "storage") {
-      //     storage = value;
-      //   }
-      //   if (name === "value") {
-      //     objSerializedForm[product] = {
-      //       storage: storage,
-      //       value: value
-      //     };
-      //   }
-      // }
-
-      var request = new XMLHttpRequest();
-      request.onreadystatechange = function() {
-        if (request.readyState == 4) {
-          if(request.status == 200) {
-            var element = document.getElementsByClassName("alert-success")[0];
-            element.classList.remove("hidden");
-            isSubmittedToday = true;
-          } else {
-            var element = document.getElementsByClassName("alert-danger")[0];
-            element.classList.remove("hidden");
-          }
-          window.scrollTo(0, 0);
-        }
-      }
-      request.open('POST', '/tasks/baking');
-      request.setRequestHeader("X-CSRFToken", csrftoken); 
-      request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-      request.send(JSON.stringify(objSerializedForm));
-    }
-  })
-</script>
 {% endblock %}
