--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -91,56 +91,8 @@
 
   /* Submit inventory */
   function submitForm() {
-
-    const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
-    
-    /* Hide all older messages */
-    var alerts = document.getElementsByClassName("alert");
-    for(var i = 0; i < alerts.length; i++) {
-      var alert = alerts[i];
-      alert.classList.add('hidden');
-    }
-    
-    /* Get form data */
     var form = document.querySelector('#product_form');
-    var form_data = new FormData(form);
-    let objSerializedForm = {};
-    for (let [name, value] of form_data) {
-      if (name === "product") {
-        product = value;
-      }
-      if (name === "storage") {
-        storage = value;
-      }
-      if (name === "value") {
-        objSerializedForm[product] = {
-          storage: storage,
-          value: value
-        };
-      }
-    }
-    objSerializedForm = JSON.stringify(objSerializedForm);
-
-    /* Submit form data */
-    var request = new XMLHttpRequest();
-    request.onreadystatechange = function() {
-      if (request.readyState == 4) {
-        if(request.status == 200) {
-          var element = document.getElementsByClassName("alert-success")[0];
-          element.classList.remove("hidden");
-          isSubmittedToday = true;
-        } else {
-          var element = document.getElementsByClassName("alert-danger")[0];
-          element.classList.remove("hidden");
-        }
-        window.scrollTo(0, 0);
-      }
-    }
-    request.open('POST', '/inventory/populate');
-    request.setRequestHeader("X-CSRFToken", csrftoken); 
-    request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-    request.send(objSerializedForm);
-
+    form.submit()
   }
 
   document.addEventListener("DOMContentLoaded", function() {
