--- a/iaroapp/templates/template_title.html
+++ b/iaroapp/templates/template_title.html
@@ -20,6 +20,15 @@
       </ul>
     </div>
     {% endif %}
+    {% if weekdays %}
+    <div style="width: auto;">
+    <select class="form-select btn btn-primary" name="weekday">
+      {% for weekday in weekdays %}
+      <option value="{{ weekday }}">{{ weekday }}</option>
+      {% endfor %}
+    </select>
+    </div>
+    {% endif %}
 </div>
 
 {% if messages %}
@@ -38,5 +47,9 @@
   .modified-date {
     padding: 0 !important;
     padding-right: 1rem !important;
+  }
+  .form-select {
+    --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+    padding-right: 2rem !important;
   }
 </style>
