--- a/tasks/templates/tasks_baking.html
+++ b/tasks/templates/tasks_baking.html
@@ -2,17 +2,19 @@
 
 {% block content %}
 
-{% include "template_title.html" with title="Baking plan" %}
-
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ formset.management_form }}
+
+{% include "template_title.html" with title="Baking plan" %}
+
   <div style="width: 100%;">
     <table class="table table-hover table-striped">
       <thread class="table-light">
         <tr class="header">
           <th scope="col" style="width:70%;">Name</th>
-          <th scope="col">Quantities</th>
+          <th scope="col">Qty Iaro Ost</th>
+          <th scope="col">Qty Iaro West</th>
         </tr>
       </thread>
       <tbody>
@@ -20,23 +22,30 @@
         <tr>
           <td class="align-middle">{{ form.name.value }}</td>
           <td class="align-middle">
-            {% for product_storage in form.instance.product_storages.all %}
             <div style="display: flex; align-items: center; flex-direction: row; gap: 0.5rem; margin-bottom: 0.5rem;">
-              <span style="flex-grow: 1;">{{ product_storage.storage }}</span>
-              <input name="storage_{{ product_storage.pk }}" type="text" pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control" id="value" value="" placeholder="{{ product_storage.value_needed }}" style="width: 100px;">
+              {{ form.value_ost }}
               {% for unit in form.instance.unit.all %}
                 <small class="opacity-50 text-nowrap truncate">
                     {{ unit.name }}
                 </small>
               {% endfor %}
             </div>
-            {% endfor %}
+          </td>
+          <td class="align-middle">
+            <div style="display: flex; align-items: center; flex-direction: row; gap: 0.5rem; margin-bottom: 0.5rem;">
+              {{ form.value_west }}
+              {% for unit in form.instance.unit.all %}
+                <small class="opacity-50 text-nowrap truncate">
+                    {{ unit.name }}
+                </small>
+              {% endfor %}
+            </div>
           </td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
-    <input type="submit" id="submitTasksBtn" class="w-100 btn btn-lg btn-primary" value="Update baking plan" style="max-width: 250px;" />
+    <input type="submit" id="submitTasksBtn" class="w-100 btn btn-primary" value="Update baking plan" style="max-width: 250px;" />
   </div>
 </form>
 
@@ -60,6 +69,9 @@
   }
   td:first-child {
     padding: .9rem .9rem !important;
+  }
+  #submitTasksBtn {
+    float: right;
   }
 </style>
 
