--- a/tasks/templates/tasks_baking.html
+++ b/tasks/templates/tasks_baking.html
@@ -73,6 +73,12 @@
   #submitTasksBtn {
     float: right;
   }
+  .form-control:invalid {
+    color: navy;
+    outline: none; 
+    border-color: #ff1050;
+    box-shadow: 0 0 10px #ff0000;
+  }
 </style>
 
 {% endblock %}
