--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -212,6 +212,19 @@
       </div>
   </div>
 
+<div class="modal fade modal-tour" tabindex="-1" role="dialog" id="submitModal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+          <div class="modal-body p-5">
+            <h2 class="fw-bold mb-0">Submit tips</h2>
+            <br>
+            <span class="submitModalContent"></span>
+            <button id="submitModalButton" type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Yes</button>
+          </div>
+        </div>
+      </div>
+  </div>
+
 <style>
   .btn-link {
     text-decoration: none;
