--- a/iaroapp/templates/template_title.html
+++ b/iaroapp/templates/template_title.html
@@ -1,12 +1,14 @@
 <div class="title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
     <div>
       <h1 class="h2">{{ title }}</h1>
+      {% if modifiedDate %}
       <div class="btn-toolbar mb-2 mb-md-0">
         <button type="button" class="btn btn-sm modified-date">
           <span data-feather="calendar" class="align-text-bottom"></span>
           Last updated: {{ modifiedDate }}
         </button>
       </div>
+      {% endif %}
     </div>
     {% if branch %}
     <div class="dropdown">
